# Fintech-App-Customer-Experience-Analytics

./: .gitignore  README.md  init_project.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  codeql.yml
configs/: db.yaml  nlp.yaml  scraper.yaml
docs/: insights_report.md  insights_report_template.md  nlp_pipeline.md  scraping_ and preprocessing_pipeline.md  scraping_methodology.md
notebooks/analysis/: insight_and_recommendation.ipynb  sentiment.ipynb
notebooks/exploration/: load_to_postgres.ipynb  scrape.ipynb
reports/: Insight report.md  executive_summary.md
scripts/: clean_reviews.py  load_to_postgres.py  run_analysis.py  run_theme_extraction.py  scrape_reviews.py
src/Fintech_App_Reviews.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fintech_app_reviews/: config.py
src/fintech_app_reviews/analysis/: insight.py
src/fintech_app_reviews/db/: connector.py  loader.py  schema.sql
src/fintech_app_reviews/db/sql/: schema.sql
src/fintech_app_reviews/nlp/: keywords.py  sentiment.py  sentiment_bert.py  sentiment_compat.py  themes.py
src/fintech_app_reviews/preprocessing/: cleaner.py  date_normalizer.py  lang_filter.py
src/fintech_app_reviews/reports/: generate_report.py
src/fintech_app_reviews/scraper/: google_play_scraper.py
src/fintech_app_reviews/utils/: helpers.py  io_utils.py  text_utils.py
src/fintech_app_reviews/viz/: plots.py  wordcloud_gen.py
tests/unit/: test_cleaner.py  test_db_loader.py  test_scraper.py
